# chip8-emulator

./: .gitignore  CMakeLists.txt  chip8.cpp
include/: chip8.hpp  ioController.hpp
src/: chip8.cpp  ioController.cpp  main.cpp
